almost working from command line

--- a/oak.html
+++ b/oak.html
@@ -1,13 +1,13 @@
 
 <pre>
-oak
+<a href="https://en.wiktionary.org/wiki/oak">oak</a>
 
-seigle
+<a href="https://fr.wiktionary.org/wiki/ch%C3%AAne">chêne</a>
 
-Eiche
+<a href="https://de.wiktionary.org/wiki/Eiche">Eiche</a>
 
-roble (quercus?)
+<a href="https://es.wiktionary.org/wiki/roble#Espa%C3%B1ol">roble (quercus?)</a>
 
-橡樹
+<a href="">橡樹</a>
 </pre>
 
